--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.DivOne {
+  width: 40%;
+  height: 100vh;
+  background-color: rgb(69, 11, 66);
+}
+
+.DivTwo {
+  display: flex;
+  width: 60%;
+  height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Card {
+  width: 100%;
+  margin-left: 35%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.FrontCard {
+  border: none;
+  margin-top: 20%;
+  height: 280px;
+  width: 85%;
+  background: rgb(24, 43, 124);
+  background: linear-gradient(135deg, rgba(24, 43, 124, 1) 18%, rgba(205, 29, 253, 1) 52%, rgba(252, 69, 70, 1) 78%);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.BackCard {
+  border: none;
+  margin-top: 6%;
+  width: 85%;
+  height: 280px;
+  margin-left: 12%;
+  background: #F5F5F5;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
